Bug 331481 - don't create unnecessary css rules.  r+sr=roc